# test-gen-pipeline

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/skills/run-pipeline/: SKILL.md
.claude/skills/run-pipeline/references/: knowledge-and-plans.md  running-pipeline.md  (+1 more)
profiles/_base/knowledge/: browser-tools.md  failure-patterns.md  test-structure.md
profiles/openproject/: profile.yaml
profiles/openproject/knowledge/: architecture.md  components.md  dom-quirks.md  locator-patterns.md  module-scaffold.md  page-objects.md  source-code-map.md  test-structure.md
prompt-templates/: healer.md.j2  investigator.md.j2  pom_builder.md.j2  test_writer.md.j2
src/pipeline/: __init__.py  classifier.py  cli.py  orchestrator.py  pom_contract_extractor.py  profile.py  prompt_builder.py  reporter.py  state.py  test_plan_parser.py  validator.py
src/pipeline/agents/: __init__.py  base.py  healer.py  investigator.py  pom_builder.py  test_writer.py
src/pipeline/schemas/: __init__.py  pom_contract.py  profile_schema.py  run_state.py  test_plan.py
tests/: __init__.py  conftest.py  test_classifier.py  test_orchestrator.py  test_pom_contract_extractor.py  test_profile.py  test_test_plan_parser.py  test_validator.py
tests/fixtures/: sample_po.ts  sample_test_plan.md
tools/dom-inspect/: config.js  index.js  package-lock.json  package.json  sanitizer.js  session.js
tools/dom-inspect/commands/: aria.js  clear-context.js  click.js  close.js  connect.js  fill.js  goto.js  locate.js  open.js  press.js  save-state.js  snapshot.js  wait.js
