[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test-gen-pipeline"
version = "0.1.0"
description = "Agentic Playwright test generation pipeline using Claude Agent SDK"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "click>=8.1",
    "rich>=13.0",
]
# Peer dependency (npm): @playwright/cli >=0.1.8
# Install with: npm install -g @playwright/cli
# Required for agents to inspect the live DOM when building/healing locators.

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
pipeline = "pipeline.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require Claude API and running services",
]
